# ProjetoMultimidia

./: README.md  app.py  pyproject.toml  slides.md
templates/: index.html
