[tool.poetry]
name = "guia-narrador-gior"
version = "1.0.0"
description = "Guia Narrador GIOR - Assistente visual inteligente para pessoas cegas ou com baixa visão"
authors = ["Walter", "Dani", "Gabs", "Fischer", "JV", "Fischer"]
license = "MIT"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.14.3"
pyaudio = "^0.2.14"
opencv-python = "^4.12.0"
pillow = "^11.3.0"
openai = "^2.7.1"
langchain = "^1.0.5"
langchain-openai = "^1.0.2"
langchain-community = "^0.4.1"
langchain-core = "^1.0.4"
faster-whisper = "^1.2.1"
keyboard = "^0.13.5"
python-dotenv = "^1.2.1"
flask = "^3.1.0"
flask-socketio = "^5.4.1"
python-socketio = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
